Added t,c and privacy

--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
         <div class="zubuz-footer-bottom">
           <div class="zubuz-copywright">
             <p>
-              &copy;Approved Applicatns only. Conditions, fees and charges may
-              apply. Copyright 2024 | Co.Credit PTY LTD | ABN 50 666 650 273
+              Approved applicants only. Conditions, fees and charges may apply.
+              Copyright &copy; 2024 | Co.Credit PTY LTD | ABN 50 666 650 273
             </p>
           </div>
         </div>
