Removed footer dots

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 <div class="zubuz-footer-title">
                   <p>Resources</p>
                 </div>
-                <ul>
+                <ul class="menu-list">
                   <li><a href="privacy.html">Privacy policy</a></li>
                   <li><a href="terms.html">Terms & Conditions</a></li>
                 </ul>
