Fixed menu on other pages

--- a/privacy.html
+++ b/privacy.html
@@ -63,7 +63,7 @@
             <nav class="menu-block" id="append-menu-header"></nav>
           </div>
 
-          <div class="header-btn header-btn-l1 ms-auto d-none d-xs-inline-flex">
+          <div class="header-btn header-btn-l1 ms-auto d-xs-inline-flex">
             <div class="zubuz-header-btn-wrap">
               <a class="zubuz-login-btn" href="sign-up.html">Login</a>
             </div>
@@ -74,11 +74,6 @@
               <span>Get Started</span>
             </a>
           </div>
-          <!-- mobile menu trigger -->
-          <div class="mobile-menu-trigger light">
-            <span></span>
-          </div>
-          <!--/.Mobile Menu Hamburger Ends-->
         </nav>
       </div>
     </header>
@@ -974,7 +969,6 @@
     <!-- scripts -->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/menu/menu.js"></script>
     <script src="assets/js/isotope.pkgd.min.js"></script>
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/slick.js"></script>
