--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="zubuz-thumb thumb-pr">
             <img src="assets/images/v1/better-book.png" alt="" />
             <div class="zubuz-thumb-card">
-              <img src="assets/images/v1/card1.png" alt="" />
+              <img src="assets/images/v1/zip.png" alt="" />
             </div>
           </div>
         </div>
@@ -203,7 +203,7 @@
           <div class="zubuz-thumb thumb-pl">
             <img src="assets/images/v1/working-cap.png" alt="" />
             <div class="zubuz-thumb-card2">
-              <img src="assets/images/v1/card2.png" alt="" />
+              <img src="assets/images/v1/zip.png" alt="" />
             </div>
           </div>
         </div>
