--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="zubuz-hero-section" style="background-image: url(assets/images/v1/hero-shape1.png)">
     <div class="container">
       <div class="zubuz-hero-content center position-relative">
-        <h1>Quick and easy business loans for Brokers.</h1>
+        <h1>Quick and easy business loans for Brokers</h1>
         <p>
           Unique, bespoke loans for trail book purchases analyzed on cash
           flow.
@@ -171,17 +171,15 @@
         </div>
         <div class="col-lg-7 d-flex align-items-center">
           <div class="zubuz-default-content">
-            <h2>Easily monitor all financial activitie</h2>
+            <h2>Welcome to the revolution of business loans for Brokers</h2>
             <p>
-              Users can input their income & expenses, categorize
-              transactions, and view reports and summaries of their spending
-              habits.
+              Using fully automated systems and software, Co.Credit provides
+              easy business loans for Brokers. Funds can be used for purchasing other
+              broker books or general business purposes.
             </p>
             <div class="zubuz-extara-mt">
               <p>
-                <span class="font-semibold">Budgeting:</span> It enables
-                effective budgeting and expense tracking, helping you stay on
-                top of your financial goals.
+                <span class="font-semibold">No tangible security:</span> You don’t need a property to get funded
               </p>
               <p>
                 <span class="font-semibold">Expense Tracking:</span> Users can
@@ -209,34 +207,23 @@
         </div>
         <div class="col-lg-7 d-flex align-items-center">
           <div class="zubuz-default-content">
-            <h2>Bank account & credit card linked</h2>
+            <h2>Low fees in, no fees out.</h2>
             <p>
-              Easily link their bank accounts & credit cards to view account
-              balances, monitor transactions and receive alerts for unusual
-              activity.
+              No valuation fees means you can get an indication of repayments
+              and rates without spending thousands of dollars.
+              And when you’re ready to payout the loan, clear it for free - no if’s and
+              but’s, so your loan can be as flexible as you are.
             </p>
             <div class="zubuz-extara-mt">
               <div class="zubuz-iconbox-wrap-left">
                 <div class="zubuz-iconbox-icon">
-                  <img src="assets/images/v1/icon1.png" alt="" />
+                  <img src="assets/images/v1/icon5.png" alt="" />
                 </div>
                 <div class="zubuz-iconbox-data">
-                  <span>Saving & Goal Setting</span>
+                  <span>Low Doc:</span>
                   <p>
-                    Easily set money aside and build your savings for the
-                    future plan and track your financial goals.
-                  </p>
-                </div>
-              </div>
-              <div class="zubuz-iconbox-wrap-left">
-                <div class="zubuz-iconbox-icon">
-                  <img src="assets/images/v1/icon2.png" alt="" />
-                </div>
-                <div class="zubuz-iconbox-data">
-                  <span>Credit Score Monitoring</span>
-                  <p>
-                    Our finance app provides credit score monitoring to help
-                    users monitor their credit health.
+                    No financials required, we’re not interested in your P&amp;L &amp; Balance
+                    Sheet
                   </p>
                 </div>
               </div>
@@ -251,7 +238,7 @@
   <div class="section zubuz-section-padding3 bg-light">
     <div class="container">
       <div class="zubuz-section-title center">
-        <h2>Features to improve your financial life</h2>
+        <h2>The business loan Brokers have been looking for</h2>
       </div>
       <div class="row">
         <div class="col-xl-4 col-md-6">
@@ -260,10 +247,10 @@
               <img src="assets/images/v1/icon3.png" alt="" />
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Financial Planning</h3>
+              <h3>Easy Peasy</h3>
               <p>
-                Users easily can create & track all types budgets, set
-                financial goals, and plan for their future.
+                The application process will take you less than 10 minutes –
+                promise!
               </p>
             </div>
           </div>
@@ -274,10 +261,9 @@
               <img src="assets/images/v1/icon4.png" alt="" />
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Security Features</h3>
+              <h3>Fully automated</h3>
               <p>
-                Security is a crucial aspect of our finance app. Security
-                measures to protect users' financial data.
+                Our system will do all the hard work for you
               </p>
             </div>
           </div>
@@ -288,10 +274,9 @@
               <img src="assets/images/v1/icon5.png" alt="" />
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Tax Preparation</h3>
+              <h3>No docs required:</h3>
               <p>
-                Preparing all the filing taxes, and optimizing deductions for
-                ensuring compliance with tax laws.
+                we save you running around
               </p>
             </div>
           </div>
@@ -302,10 +287,22 @@
               <img src="assets/images/v1/icon6.png" alt="" />
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Offline Access</h3>
+              <h3>Automated valuation</h3>
               <p>
-                Offline access means you can use essential features and data
-                without an internet connection.
+                Saves you time and money
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-4 col-md-6">
+          <div class="zubuz-iconbox-wrap center">
+            <div class="zubuz-iconbox-icon">
+              <img src="assets/images/v1/icon1.png" alt="" />
+            </div>
+            <div class="zubuz-iconbox-data">
+              <h3>Reasonable rates</h3>
+              <p>
+                We play nice so you can grow too
               </p>
             </div>
           </div>
@@ -316,24 +313,9 @@
               <img src="assets/images/v1/icon7.png" alt="" />
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Currency Conversion</h3>
+              <h3>Flexible</h3>
               <p>
-                Al the travelers or international business, our finance app
-                also offer currency conversion tools.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-md-6">
-          <div class="zubuz-iconbox-wrap center">
-            <div class="zubuz-iconbox-icon">
-              <img src="assets/images/v1/icon8.png" alt="" />
-            </div>
-            <div class="zubuz-iconbox-data">
-              <h3>Integration Support</h3>
-              <p>
-                The ability to connect with other financial tools accounting
-                software, or payment platforms.
+                Payout your loan at any time with no fees
               </p>
             </div>
           </div>
