Updated hero section

--- a/index.html
+++ b/index.html
@@ -104,53 +104,20 @@
   <div class="section dark-bg zubuz-section-padding4">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5">
+        <div class="col-lg-6">
           <div class="zubuz-brand-logo-content">
             <h3>
-              Over 50,000 people rely on our app for their money choices
+              “Co.Credit helped me secure funding for a book purchase in 24 hours, and
+              at a rate lower than the competition.”
             </h3>
+            <p style="color: white;">
+              Bret Mullavey – Fintcap (Broker, Melbourne)
+            </p>
           </div>
         </div>
-        <div class="col-lg-7">
-          <div class="zubuz-brand-slider">
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_1.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_2.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_3.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_4.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_5.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_6.png" alt="" />
-            </div>
-          </div>
-          <div class="zubuz-brand-slider2">
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_1.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_2.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_3.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_4.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_5.png" alt="" />
-            </div>
-            <div class="zubuz-brand-item">
-              <img src="assets/images/v1/b_6.png" alt="" />
-            </div>
+        <div class="col-lg-6">
+          <div class="zubuz-brand-item" style="display: flex; justify-content: flex-end;">
+            <img src="assets/images/v1/h-card2.png" alt="" />
           </div>
         </div>
       </div>
@@ -324,6 +291,27 @@
     </div>
   </div>
   <!-- End Section -->
+
+  <div class="zubuz-cta-section blue-bg">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7 order-lg-2 d-flex align-items-center">
+          <div class="zubuz-default-content light">
+            <h2>How does it work?</h2>
+            <p>Your financial future is just a download away. Get our app and experience the benefits of better money
+              management.</p>
+          </div>
+        </div>
+        <div class="col-lg-5">
+          <div class="zubuz-cta-thumb">
+            <img src="assets/images/v1/cta-mocup.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End section -->
+
 
   <footer class="zubuz-footer-section main-footer">
     <div class="container">
