Tweaking final styles

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </p>
         <div class="zubuz-hero-btn-wrap center">
           <a class="zubuz-default-btn" href="contact-us.html">
-            <span>Assess your trail for free</span>
+            <span>Let's get started</span>
           </a>
         </div>
         <div class="zubuz-hero-shape">
@@ -101,7 +101,7 @@
   </div>
   <!-- End section -->
 
-  <div class="section dark-bg zubuz-section-padding4">
+  <!-- <div class="section dark-bg zubuz-section-padding4">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
@@ -116,16 +116,16 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="zubuz-brand-item" style="display: flex; justify-content: flex-end;">
-            <img src="assets/images/v1/h-card2.png" alt="" />
+          <div class="zubuz-brand-item testimonial-image">
+            <img src="assets/images/v1/fintcap.png" alt="" />
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- End section -->
 
-  <div class="section zubuz-section-padding2">
+  <div class="section zubuz-section-padding2 dark-bg" style="color: white;">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -138,7 +138,7 @@
         </div>
         <div class="col-lg-7 d-flex align-items-center">
           <div class="zubuz-default-content">
-            <h2>Welcome to the revolution of business loans for Brokers</h2>
+            <h2 style="color: white;">Welcome to the revolution of business loans for Brokers</h2>
             <p>
               Using fully automated systems and software, Co.Credit provides
               easy business loans for Brokers. Funds can be used for purchasing other
@@ -161,7 +161,7 @@
   </div>
   <!-- End section -->
 
-  <div class="section zubuz-section-padding5">
+  <div class="section zubuz-section-padding4">
     <div class="container">
       <div class="row">
         <div class="col-lg-5 order-lg-2">
@@ -195,6 +195,28 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End section -->
+
+  <div class="zubuz-cta-section dark-bg" style="color: white;">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-7 order-lg-2 d-flex align-items-center">
+          <div class="zubuz-default-content light">
+            <h2>It only takes 10 minutes</h2>
+            <p>Within 48 hours you could have your loan approved. Click below to get started.</p>
+            <a class="zubuz-default-btn" href="contact-us.html">
+              <span>Let's get started</span>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-5">
+          <div class="zubuz-cta-thumb">
+            <img src="assets/images/v1/how-it-works.png" alt="">
           </div>
         </div>
       </div>
@@ -292,25 +314,7 @@
   </div>
   <!-- End Section -->
 
-  <div class="zubuz-cta-section blue-bg">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-7 order-lg-2 d-flex align-items-center">
-          <div class="zubuz-default-content light">
-            <h2>How does it work?</h2>
-            <p>Your financial future is just a download away. Get our app and experience the benefits of better money
-              management.</p>
-          </div>
-        </div>
-        <div class="col-lg-5">
-          <div class="zubuz-cta-thumb">
-            <img src="assets/images/v1/cta-mocup.png" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End section -->
+
 
 
   <footer class="zubuz-footer-section main-footer">
