--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="row">
         <div class="col-lg-7 order-lg-2 d-flex align-items-center">
           <div class="zubuz-default-content light">
-            <h2>It only takes 10 minutes</h2>
+            <h2>How does it work?</h2>
             <p>Within 48 hours you could have your loan approved. Click below to get started.</p>
             <a class="zubuz-default-btn" href="contact-us.html">
               <span>Let's get started</span>
