--- a/index.html
+++ b/index.html
@@ -319,6 +319,21 @@
 
   <footer class="zubuz-footer-section main-footer">
     <div class="container">
+      <div class="zubuz-footer-extra-top">
+        <div class="row">
+          <div class="col-lg-7">
+            <div class="zubuz-footer-extra-title">
+              <h2>Ready to get started?</h2>
+            </div>
+          </div>
+          <div class="col-lg-5 d-flex align-items-center">
+            <div class="zubuz-footer-btn">
+              <a class="zubuz-default-btn pill" href="contact-us.html"><span>Get started now</span></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="zubuz-footer-top">
         <div class="row">
           <div class="col-xl-4 col-lg-12">
