--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
         <div class="header-btn header-btn-l1 ms-auto d-xs-inline-flex">
           <div class="zubuz-header-btn-wrap">
-            <a class="zubuz-login-btn" href="sign-up.html">Login</a>
+            <a class="zubuz-login-btn" href="https://portal.cocredit.com.au">Login</a>
           </div>
-          <a class="zubuz-default-btn zubuz-header-btn" href="contact-us.html">
+          <a class="zubuz-default-btn zubuz-header-btn" href="https://portal.cocredit.com.au/auth/register">
             <span>Get Started</span>
           </a>
         </div>
@@ -72,7 +72,7 @@
           flow.
         </p>
         <div class="zubuz-hero-btn-wrap center">
-          <a class="zubuz-default-btn" href="contact-us.html">
+          <a class="zubuz-default-btn" href="https://portal.cocredit.com.au/auth/register">
             <span>Let's get started</span>
           </a>
         </div>
@@ -209,7 +209,7 @@
           <div class="zubuz-default-content light">
             <h2>How does it work?</h2>
             <p>Within 48 hours you could have your loan approved. Click below to get started.</p>
-            <a class="zubuz-default-btn" href="contact-us.html">
+            <a class="zubuz-default-btn" href="https://portal.cocredit.com.au/auth/register">
               <span>Let's get started</span>
             </a>
           </div>
@@ -328,7 +328,8 @@
           </div>
           <div class="col-lg-5 d-flex align-items-center">
             <div class="zubuz-footer-btn">
-              <a class="zubuz-default-btn pill" href="contact-us.html"><span>Get started now</span></a>
+              <a class="zubuz-default-btn pill" href="https://portal.cocredit.com.au/auth/register"><span>Get started
+                  now</span></a>
             </div>
           </div>
         </div>
@@ -361,7 +362,7 @@
         <div class="zubuz-copywright">
           <p>
             Approved applicants only. Conditions, fees and charges may apply.
-            Copyright &copy; 2024 | Co.Credit PTY LTD | ABN 50 666 650 273
+            Copyright &copy; 2024 | Co.Credit pty. ltd. | ABN 50 666 650 273
           </p>
         </div>
       </div>
