small tile tweaks

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <div class="zubuz-iconbox-data">
               <h3>Fully automated</h3>
               <p>
-                Our system will do all the hard work for you
+                We'll do all the hard work
               </p>
             </div>
           </div>
@@ -263,9 +263,9 @@
               <img src="assets/images/v1/icon5.png" alt="" />
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>No docs required:</h3>
+              <h3>No docs required</h3>
               <p>
-                we save you running around
+                To save you running around
               </p>
             </div>
           </div>
@@ -291,7 +291,7 @@
             <div class="zubuz-iconbox-data">
               <h3>Reasonable rates</h3>
               <p>
-                We play nice so you can grow too
+                We play nice to keep your costs down
               </p>
             </div>
           </div>
@@ -304,7 +304,7 @@
             <div class="zubuz-iconbox-data">
               <h3>Flexible</h3>
               <p>
-                Payout your loan at any time with no fees
+                Payout your loan at any time with no penalties
               </p>
             </div>
           </div>
