Fixes safari and mobile bugs

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </header>
   <!--End landex-header-section -->
 
-  <div class="zubuz-hero-section" style="background-image: url(assets/images/v1/hero-shape1.png)">
+  <div class="zubuz-hero-section">
     <div class="container">
       <div class="zubuz-hero-content center position-relative">
         <h1>Quick and easy business loans for Brokers</h1>
