fixed header bg

--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Co.Credit - Trail Book Finance</title>
+  <meta name="description" content="Unique, bespoke loans for trail book purchases analyzed on cash flow.">
 
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
   <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
@@ -37,7 +38,8 @@
     </div>
   </div>
 
-  <header class="site-header site-header--menu-center zubuz-header-section dark-bg white-menu" id="sticky-menu">
+  <header class="site-header site-header--menu-center zubuz-header-section dark-bg white-menu" id="sticky-menu"
+    style="background-color: black;">
     <div class="container">
       <nav class="navbar site-navbar">
         <!-- Brand Logo-->
