Fixed header on mobile

--- a/terms.html
+++ b/terms.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="header-btn header-btn-l1 ms-auto d-xs-inline-flex">
-          <div class="zubuz-header-btn-wrap">
+          <div class="zubuz-header-btn-wrap btn-login">
             <a class="zubuz-login-btn" href="https://portal.cocredit.com.au">Login</a>
           </div>
           <a class="zubuz-default-btn zubuz-header-btn" href="https://portal.cocredit.com.au/auth/register">
