More minor tweaks

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         <div class="col-lg-7 d-flex align-items-center">
           <div class="zubuz-default-content">
-            <h2 style="color: white;">Welcome to the revolution of business loans for Brokers</h2>
+            <h2 style="color: white;">The leader in business lending for Brokers</h2>
             <p>
               Using fully automated systems and software, Co.Credit provides
               easy business loans for Brokers. Funds can be used for purchasing other
