re-added testimonial

--- a/index.html
+++ b/index.html
@@ -125,31 +125,31 @@
     </div>
     <!-- End section -->
 
-    <!-- <div class="section dark-bg zubuz-section-padding4">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="zubuz-brand-logo-content">
-            <h3>
-              “Co.Credit helped me secure funding for a book purchase in 24 hours, and
-              at a rate lower than the competition.”
-            </h3>
-            <p style="color: white;">
-              Bret Mullavey – Fintcap (Broker, Melbourne)
-            </p>
+    <div class="section dark-bg zubuz-section-padding4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="zubuz-brand-logo-content">
+              <h3>
+                “Co.Credit provides super easy loans to Brokers, empowering them
+                to create bigger, more profitable businesses”
+              </h3>
+              <p style="color: white">
+                Bret Mullavey – Fintcap (Broker, Melbourne)
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="zubuz-brand-item testimonial-image">
-            <img src="assets/images/v1/fintcap.png" alt="" />
+          <div class="col-lg-6">
+            <div class="zubuz-brand-item testimonial-image">
+              <img src="assets/images/v1/fintcap.png" alt="" />
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div> -->
     <!-- End section -->
 
-    <div class="section zubuz-section-padding2 dark-bg" style="color: white">
+    <div class="section zubuz-section-padding2">
       <div class="container">
         <div class="row">
           <div class="col-lg-5">
@@ -162,9 +162,7 @@
           </div>
           <div class="col-lg-7 d-flex align-items-center">
             <div class="zubuz-default-content">
-              <h2 style="color: white">
-                The leader in business lending for Brokers
-              </h2>
+              <h2>The leader in business lending for Brokers</h2>
               <p>
                 Using fully automated systems and software, Co.Credit provides
                 easy business loans for Brokers. Funds can be used for
