Updated signup link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <a
               class="zubuz-default-btn zubuz-header-btn"
-              href="https://portal.cocredit.com.au/auth/register"
+              href="https://portal.cocredit.com.au/auth/signup"
             >
               <span>Get Started</span>
             </a>
@@ -95,7 +95,7 @@
           <div class="zubuz-hero-btn-wrap center">
             <a
               class="zubuz-default-btn"
-              href="https://portal.cocredit.com.au/auth/register"
+              href="https://portal.cocredit.com.au/auth/signup"
             >
               <span>Let's get started</span>
             </a>
@@ -239,7 +239,7 @@
               </p>
               <a
                 class="zubuz-default-btn"
-                href="https://portal.cocredit.com.au/auth/register"
+                href="https://portal.cocredit.com.au/auth/signup"
               >
                 <span>Let's get started</span>
               </a>
@@ -348,7 +348,7 @@
               <div class="zubuz-footer-btn">
                 <a
                   class="zubuz-default-btn pill"
-                  href="https://portal.cocredit.com.au/auth/register"
+                  href="https://portal.cocredit.com.au/auth/signup"
                   ><span>Get started now</span></a
                 >
               </div>
