--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
           <div class="zubuz-hero-card card1">
             <img src="assets/images/v1/header-top-left.png" alt="" />
           </div>
-          <div class="zubuz-hero-card card2 wow">
+          <div class="zubuz-hero-card card2">
             <img src="assets/images/v1/header-bottom-left.png" alt="" />
           </div>
-          <div class="zubuz-hero-card card3 wow">
+          <div class="zubuz-hero-card card3">
             <img src="assets/images/v1/header-top-right.png" alt="" />
           </div>
-          <div class="zubuz-hero-card card4 wow">
+          <div class="zubuz-hero-card card4">
             <img src="assets/images/v1/header-bottom-right.png" alt="" />
           </div>
         </div>
