--- a/trailpulse.html
+++ b/trailpulse.html
@@ -184,30 +184,32 @@
   <div class="section zubuz-section-padding3 bg-light">
     <div class="container">
       <div class="zubuz-section-title center">
-        <h2>Features to improve your financial life</h2>
+        <h2>Build a Bigger Broker Business</h2>
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2" style="background-color: #fff;">
             <div class="zubuz-iconbox-icon">
               <img src="assets/images/v2/icon-v2-3.png" alt="">
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Sales pipeline management:</h3>
-              <p>Visualize your sales process, track opportunities, and forecast revenue with pipeline management tools.
+              <h3>Quick updates on new loans and problem loans:</h3>
+              <p>Confirm your new loans for the month and follow up on loans experiencing impairment, clawbacks or
+                refinances.
               </p>
             </div>
             <div class="zubuz-iconbox-thumb">
               <img src="assets/images/v2/card-v2-1.png" alt="">
             </div>
           </div>
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2" style="background-color: #fff;">
             <div class="zubuz-iconbox-icon">
               <img src="assets/images/v2/icon-v2-2.png" alt="">
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Marketing Automation:</h3>
-              <p>Automate marketing campaigns, email outreach, and lead nurturing to engage customers effectively.</p>
+              <h3>Drill down on existing loans:</h3>
+              <p>Get an up to date valuation with insights into what’s helping and hindering the value of your loan
+                book.</p>
             </div>
             <div class="zubuz-iconbox-thumb">
               <img src="assets/images/v2/card-v2-3.png" alt="">
@@ -215,25 +217,26 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2" style="background-color: #fff; padding-bottom: 12px;">
             <div class="zubuz-iconbox-icon">
               <img src="assets/images/v2/icon-v2-2.png" alt="">
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Analytics and reporting:</h3>
-              <p>Generate in-depth reports and analytics to make data-driven decisions and measure performance.</p>
+              <h3>Up to date valuation:</h3>
+              <p>Get an up to date valuation with insights into what’s helping and hindering the value of your loan
+                book.</p>
             </div>
             <div class="zubuz-iconbox-thumb">
               <img src="assets/images/v2/card-v2-2.png" alt="">
             </div>
           </div>
-          <div class="zubuz-iconbox-wrap2">
+          <div class="zubuz-iconbox-wrap2" style="background-color: #fff;">
             <div class="zubuz-iconbox-icon">
               <img src="assets/images/v2/icon-v2-4.png" alt="">
             </div>
             <div class="zubuz-iconbox-data">
-              <h3>Track customers movement:</h3>
-              <p>Monitoring and analyzing client behavior, interactions, and engagement online or offline.</p>
+              <h3>Better understand your clients:</h3>
+              <p>With stronger insights, get a better understanding of your clients and how to retain them</p>
             </div>
             <div class="zubuz-iconbox-thumb">
               <img src="assets/images/v2/card-v2-4.png" alt="">
