--- a/trailpulse.html
+++ b/trailpulse.html
@@ -349,7 +349,7 @@
     <div class="container">
       <div class="zubuz-cta-wrap" style="background-image: url(assets/images/v2/cta-bg.png)">
         <div class="zubuz-cta-content">
-          <h2>Start analyzing your book now</h2>
+          <h2>Start analysing your book now</h2>
           <div class="zubuz-subscribe-two">
             <a class="zubuz-default-btn pill" href="https://portal.cocredit.com.au/auth/signup"><span>Get started
                 now</span></a>
