Added brets image

--- a/trailpulse.html
+++ b/trailpulse.html
@@ -166,11 +166,11 @@
           </div>
           <div class="zubuz-testimonial-slider-author">
             <div class="zubuz-testimonial-slider-author-thumb">
-              <img src="assets/images/v2/t-user.png" alt="">
+              <img src="assets/images/v1/fintcap.png" alt="">
             </div>
             <div class="zubuz-testimonial-slider-author-data">
-              <span>Jonas Aly</span>
-              <p>Founder @ Company</p>
+              <span>Bret Mullavey</span>
+              <p>Fintcap (Broker, Melbourne)</p>
             </div>
           </div>
         </div>
@@ -272,12 +272,12 @@
   <div class="section zubuz-section-padding2">
     <div class="container">
       <div class="zubuz-section-title center">
-        <h2>Find all the answers to your confusion</h2>
+        <h2>Common Questions</h2>
       </div>
       <div class="zubuz-accordion-wrap zubuz-accordion-wrap2" id="zubuz-accordion">
         <div class="zubuz-accordion-item open">
           <div class="zubuz-accordion-header">
-            <p>Q: What makes your SaaS solution stand out from competitors?</p>
+            <p>Q: How’s my data stored?</p>
             <div class="zubuz-active-icon">
               <img src="assets/images/v2/plus.png" alt="">
             </div>
@@ -286,14 +286,13 @@
             </div>
           </div>
           <div class="zubuz-accordion-body">
-            <p> Our SaaS platform distinguishes itself through a combination of user-friendly design, robust feature
-              set, and a commitment to constant innovation. We prioritize customer feedback to ensure we stay ahead of
-              the curve and meet evolving business needs.</p>
+            <p>All data is stored in Australia and is fully encrypted. No login and payment details are not stored in
+              our systems.</p>
           </div>
         </div>
         <div class="zubuz-accordion-item">
           <div class="zubuz-accordion-header">
-            <p>Q: How secure is the data stored on your platform?</p>
+            <p>Q: How much does it cost??</p>
             <div class="zubuz-active-icon">
               <img src="assets/images/v2/plus.png" alt="">
             </div>
@@ -302,14 +301,13 @@
             </div>
           </div>
           <div class="zubuz-accordion-body">
-            <p>Security is our top priority. We employ state-of-the-art encryption, regular security audits, and
-              compliance with industry standards to safeguard your data. Our commitment is to provide a secure
-              environment for your valuable information.</p>
+            <p>During our pilot stage, pricing is free. We expect to increase our pricing to a monthly fee of $29 from
+              July.</p>
           </div>
         </div>
         <div class="zubuz-accordion-item">
           <div class="zubuz-accordion-header">
-            <p>Q: Can your SaaS solution integrate with other tools we use?</p>
+            <p>Q: Which aggregators are supported?</p>
             <div class="zubuz-active-icon">
               <img src="assets/images/v2/plus.png" alt="">
             </div>
@@ -318,28 +316,10 @@
             </div>
           </div>
           <div class="zubuz-accordion-body">
-            <p>Absolutely. We understand the importance of seamless integration. Our SaaS solution is designed to work
-              harmoniously with a variety of popular tools and platforms, ensuring a smooth workflow and reducing any
-              disruptions to your current processes.</p>
+            <p>At the minute, we only accept brokers from NMB. We will look to onboard further aggregators in the near
+              future.</p>
           </div>
         </div>
-        <div class="zubuz-accordion-item">
-          <div class="zubuz-accordion-header">
-            <p>Q: What kind of customer support can we expect?</p>
-            <div class="zubuz-active-icon">
-              <img src="assets/images/v2/plus.png" alt="">
-            </div>
-            <div class="zubuz-inactive-icon">
-              <img src="assets/images/v2/minus.png" alt="">
-            </div>
-          </div>
-          <div class="zubuz-accordion-body">
-            <p>Our customer support team is dedicated to your success. You can expect prompt responses, helpful
-              resources, and, if needed, personalized assistance. We believe in building long-lasting relationships with
-              our users, and exceptional support.</p>
-          </div>
-        </div>
-
       </div>
     </div>
   </div>
