Hiding bret on main

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
   </div>
   <!-- End section -->
-
+  <!-- 
   <div class="section dark-bg zubuz-section-padding4">
     <div class="container">
       <div class="row">
@@ -123,7 +123,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- End section -->
 
   <div class="section zubuz-section-padding2">
