Fixed data stored q

--- a/trailpulse.html
+++ b/trailpulse.html
@@ -286,7 +286,7 @@
             </div>
           </div>
           <div class="zubuz-accordion-body">
-            <p>All data is stored in Australia and is fully encrypted. No login and payment details are not stored in
+            <p>All data is stored in Australia and is fully encrypted. Your login and payment details are not stored in
               our systems.</p>
           </div>
         </div>
