--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Co.Credit - Trail Book Finance</title>
+    <title>Co.Credit - Terms & Conditions</title>
     <meta
       name="description"
       content="Unique, bespoke loans for trail book purchases analyzed on cash flow."
