--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WQ65J4VE5N"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WQ65J4VE5N');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Co.Credit - Trail Book Finance</title>
   <meta name="description" content="Unique, bespoke loans for trail book purchases analyzed on cash flow." />
