--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WQ65J4VE5N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'G-WQ65J4VE5N');
+    </script>    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Co.Credit - Terms & Conditions</title>
     <meta
