--- a/trailpulse.html
+++ b/trailpulse.html
@@ -3,14 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WQ65J4VE5N"></script>
+    <!-- START GOOGLE TAGS -->
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-WQ65J4VE5N');
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-NWB3H5MQ");
     </script>
+    <!-- END GOOGLE TAGS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Co.Credit - Broker Book Analytics Tool</title>
 
@@ -41,6 +47,16 @@
   </head>
 
   <body class="light">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NWB3H5MQ"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="zubuz-preloader-wrap">
       <div class="zubuz-preloader">
         <div></div>
