--- a/thank-you.html
+++ b/thank-you.html
@@ -19,7 +19,7 @@
     </script>
     <!-- END GOOGLE TAGS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Co.Credit - Contact Us</title>
+    <title>Co.Credit - Thank you</title>
     <meta
       name="description"
       content="Unique, bespoke loans for trail book purchases analyzed on cash flow."
@@ -111,7 +111,7 @@
 
     <div class="zubuz-breadcrumb">
       <div class="container">
-        <h1 class="post__title">Let's chat</h1>
+        <h1 class="post__title">Thanks</h1>
       </div>
     </div>
     <!-- End breadcrumb -->
@@ -119,14 +119,10 @@
     <div class="section zubuz-section-padding2">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-12">
             <div class="zubuz-default-content m-right">
-              <h2>Contact our team</h2>
-              <p>
-                Book an appointment with our team now! If you have any questions
-                about growing your business, contact our team and schedule a
-                call.
-              </p>
+              <h2>Thanks for getting in touch.</h2>
+              <p>We'll be in touch in the next 24 hours.</p>
               <div class="zubuz-extara-mt">
                 <div class="zubuz-iconbox-wrap-left d-block">
                   <div class="zubuz-iconbox-data data-small">
@@ -135,39 +131,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="zubuz-form-wrap">
-              <h3>Fill the from below</h3>
-              <form action="https://formspree.io/f/mqkrwwrb" method="POST">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="zubuz-main-form">
-                      <input type="text" placeholder="Your Name*" />
-                    </div>
-                  </div>
-                  <div class="col-lg-12">
-                    <div class="zubuz-main-form">
-                      <input type="email" placeholder="Email Address*" />
-                    </div>
-                  </div>
-                  <div class="col-lg-12">
-                    <div class="zubuz-main-form">
-                      <input type="mobile" placeholder="Contact Number*" />
-                    </div>
-                  </div>
-                </div>
-                <div class="zubuz-main-form">
-                  <textarea
-                    name="textarea"
-                    placeholder="Write us your comment"
-                  ></textarea>
-                </div>
-                <button id="zubuz-submit-btn" type="button">
-                  <span>Send Message</span>
-                </button>
-              </form>
             </div>
           </div>
         </div>
