Updated the cop

--- a/thank-you.html
+++ b/thank-you.html
@@ -111,7 +111,7 @@
 
     <div class="zubuz-breadcrumb">
       <div class="container">
-        <h1 class="post__title">Thanks</h1>
+        <h1 class="post__title">We're on it</h1>
       </div>
     </div>
     <!-- End breadcrumb -->
